display representations of opponent on screens

--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ div {
   border-right: 1px solid gray;
 }
 
-#one .arm, #one .body {
+#one .arm, #one .body, #two .opponent .arm, #two .opponent .body {
   background: #fd9aea;
 }
 
-#two .arm, #two .body {
+#two .arm, #two .body, #one .opponent .arm, #one .opponent .body {
   background: #9afdb1;
 }
 
@@ -30,12 +30,26 @@ div {
   bottom: 0;
 }
 
+.player.opponent {
+  top: 20vh;
+}
+
 .arm {
   width: 8vh;
   height: 30vh;
 }
 
+.opponent .arm {
+  width: 4vh;
+  height: 15vh;
+}
+
 .body {
   width: 24vh;
   height: 50vh;
+}
+
+.opponent .body {
+  width: 12vh;
+  height: 25vh;
 }
