--- a/style.css
+++ b/style.css
@@ -121,11 +121,19 @@ div {
 }
 
 .shake {
-  animation: shake 0.1s ease-in-out 0.1s infinite alternate;
+  animation: shake 0.1s ease-in-out infinite alternate;
 }
 
 .knockout {
   animation: knockout 0.75s ease-in normal forwards;
+}
+
+.celebrateBody {
+  animation: celebrateBody 0.25s ease-in-out infinite alternate;
+}
+
+.celebrateArm {
+  animation: celebrateArm 0.25s ease-in-out 0.1s infinite alternate;
 }
 
 @keyframes shake {
@@ -139,6 +147,24 @@ div {
 
 @keyframes knockout {
   to {
-    transform: translateY(100vh);
+    transform: translateY(120vh);
   }
+}
+
+@keyframes celebrateBody {
+ from {
+   transform: translateY(0vh);
+ }
+ to {
+   transform: translateY(5vh);
+ }
+}
+
+@keyframes celebrateArm {
+ from {
+   transform: translateY(-20vh);
+ }
+ to {
+   transform: translateY(-25vh);
+ }
 }
