--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ main {
   display: flex;
 }
 
+div {
+  display: inline-block;
+}
+
 .screen {
   height: 100vh;
   flex-grow: 1;
@@ -9,12 +13,11 @@ main {
   justify-content: space-around;
 }
 
-div {
-  display: inline-block;
-}
-
-#one {
-  border-right: 1px solid gray;
+#divider {
+  background: lightgray;
+  width: 1vh;
+  height: 100vh;
+  border-radius: 100vh;
 }
 
 .one .arm, .one .body, #one .healthbar {
